# pyscanner

./: README.md  pyproject.toml
pyscanner/: __main__.py
tests/: conftest.py
