[tool.poetry]
name = "pyscanner"
version = "0.0.1"
description = "Python Port Scanner"
authors = ["Mike Bosland <mike.bosland@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mab538/pyscanner"
repository = "https://github.com/mab538/pyscanner"
exclude = ["tests"]
include = ["LICENSE"]
license = ""
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [
    { include = "pyscanner"}
]

[tool.poetry.scripts]
pyscanner = 'pyscanner.__main__:main'

[tool.poetry.dependencies]
python = "^3.8.0"
netaddr = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
